--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #EDF3FD;
+  --background: #F8F9FD;
   --foreground: #171717;
 }
 
@@ -12,7 +12,8 @@
 }
 
 body {
-  background: #EDF3FD;
+  background: #F8F9FD;
+  background: radial-gradient(circle at 40% 40%, #EDF3FD, #F9FBFC00 100%);
   color: var(--foreground);
   font-family: var(--font-satoshi), sans-serif;
   min-height: 100vh;
